<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/bottom_home_select"
        android:title="@string/bottom_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_quotes"
        android:enabled="true"
        android:icon="@drawable/bottom_quotes_select"
        android:title="@string/bottom_quotes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_learn"
        android:enabled="true"
        android:icon="@drawable/bottom_learn_select"
        android:title="@string/bottom_learn"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_advisory"
        android:enabled="true"
        android:icon="@drawable/bottom_advisory_select"
        android:title="@string/bottom_advisory"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_person"
        android:enabled="true"
        android:icon="@drawable/bottom_person_select"
        android:title="@string/bottom_person"
        app:showAsAction="ifRoom" />

</menu>